feat: Create 4 relational entity classes
Implemented the JPA (Java Persistence API) + MySQL best practice :
1. Created relational entity classes: Author, Course, Chapter, Documentation
2. Using jakarta persistence annotations to eract relations bwtewwn entity classes.
3. Using lombok-EqualsAndHashCode annotation to define how equals() and hashcode() methods should work.
4. Added some inner-service common methods like add..(), remove(), get..Number(), clear..().